refactor: group routes into an index file
